# nanoRLHF

./: README.md  pyproject.toml
examples/: kernels.py  nanotron.py
nanorlhf/: __init__.py
nanorlhf/kernels/: __init__.py  api.py  patch.py
nanorlhf/kernels/flash_attention/: fwd.py
nanorlhf/kernels/flash_attn/: bwd.py  fwd.py  ops.py
nanorlhf/kernels/flash_attn_varlen/: bwd.py  fwd.py  ops.py
nanorlhf/kernels/rmsnorm/: bwd.py  fwd.py  ops.py
nanorlhf/kernels/rotary/: ops.py
nanorlhf/kernels/utils/: huggingface.py
nanorlhf/models/qwen3/: modeling_qwen3.py
nanorlhf/nanosets/: api.py  utils.py
nanorlhf/nanosets/core/: bitmap.py  buffer.py
nanorlhf/nanosets/dtype/: array.py  dtype_inference.py  list_array.py  primitive_array.py  string_array.py  struct_array.py  tensor_array.py
nanorlhf/nanosets/io/: ipc.py  json_io.py
nanorlhf/nanosets/table/: record_batch.py  schema.py  table.py
nanorlhf/nanotron/: api.py
nanorlhf/nanotron/distributed/: collectives.py  initializers.py  mode.py  mpu.py  p2p.py  (+1 more)
tests/kernels/: flash_attn_huggingface_test.py
tests/nanosets/: bench_test.py
tests/nanotron/: ckpt.py  loss_tp1_pp1_dp4_stg1.json  loss_tp1_pp1_dp4_stg2.json  loss_tp1_pp1_dp4_stg3.json  loss_tp1_pp2_dp2_stg0.json  loss_tp1_pp2_dp2_stg1.json  loss_tp1_pp4_dp1_stg0.json  loss_tp2_pp1_dp2_stg0.json  loss_tp2_pp1_dp2_stg1.json  loss_tp2_pp1_dp2_stg2.json  loss_tp2_pp2_dp1_stg0.json  loss_tp2_pp2_dp2_stg1.json  loss_tp4_pp1_dp1_stg0.json  loss_tp4_pp1_dp2_stg3.json  plot.py  test_all.sh  tp_test.py  tracing_test.py  train.py  train_pp.py  train_tp_pp.py
(+16 files in other folders)
